# cloud-clerk-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cloudclerk/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py
src/cloudclerk/commands/: configure.py  queries.py
tests/: test_client.py  test_commands.py  test_config.py  test_display.py
