[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudclerk"
version = "0.1.0"
description = "CLI for CloudClerk - BigQuery cost optimization from the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Numia", email = "engineering@numia.xyz" }]
keywords = ["bigquery", "cost-optimization", "cli", "cloud", "gcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
cloudclerk = "cloudclerk.cli:app"

[project.urls]
Homepage = "https://cloudclerk.io"
Documentation = "https://github.com/numia-xyz/cloudclerk-cli#readme"
Repository = "https://github.com/numia-xyz/cloudclerk-cli"
Issues = "https://github.com/numia-xyz/cloudclerk-cli/issues"
Changelog = "https://github.com/numia-xyz/cloudclerk-cli/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudclerk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
